--- a/k8s/storage-statefulset.yaml
+++ b/k8s/storage-statefulset.yaml
@@ -1,34 +1,34 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: 
+  name: my-storage
 spec:
-  serviceName: ""
+  serviceName: "web-storage"
   updateStrategy:
     type: RollingUpdate
-  replicas: 
+  replicas: 2
   selector:
     matchLabels:
-      app: 
+      app: storage
   template:
     metadata:
       labels:
-        app: 
+        app: storage
     spec:
       containers:
         - name: 
-          image: gcr.io/icai2025/storage:latest
-          imagePullPolicy: 
+          image: gcr.io/exam-458209/storage:latest
+          imagePullPolicy: Always
           ports:
-            - containerPort: 
+            - containerPort: 3000
           volumeMounts:
-            - name: 
-              mountPath: 
+            - name: storage-volume
+              mountPath: /app
   volumeClaimTemplates:
     - metadata:
         name: storage-volume
       spec:
-        storageClassName: 
+        storageClassName: ""
         accessModes: ["ReadWriteOnce"]
         resources:
           requests:
@@ -37,10 +37,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: storage
+  name: internal-service
 spec:
-  clusterIP: 
+  clusterIP: ClusterIP
   selector:
-    app: 
+    app: storage
   ports:
-    - port: 
+    - port: 80
