--- a/k8s/web-deployment.yaml
+++ b/k8s/web-deployment.yaml
@@ -1,41 +1,41 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: 
+  name: my-deployment
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: 
+      app: web
   template:
     metadata:
       labels:
-        app: 
+        app: web
     spec:
       containers:
         - name: web
-          image: gcr.io/icai2025/web:latest
-          imagePullPolicy: 
+          image: gcr.io/exam-458209/web:latest
+          imagePullPolicy: Always
           ports:
-            - containerPort: 
+            - containerPort: 3000
           env:
             - name: STORAGE_SVC
-              value: ""
+              value: "web-storage"
           livenessProbe:
             httpGet:
               path: /phrase
-              port:
-            periodSeconds: 15
+              port: 3000
+            periodSeconds: 2
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: 
+  name: my-lb
 spec:
   selector:
-    app: 
+    app: web
   ports:
-    - protocol: 
+    - protocol: http
       port: 80
-      targetPort: 
-  type:
+      targetPort: 3000
+  type: LoadBalancer
