--- a/k8s/web-deployment.yaml
+++ b/k8s/web-deployment.yaml
@@ -35,7 +35,7 @@ spec:
   selector:
     app: web
   ports:
-    - protocol: http
+    - protocol: TCP
       port: 80
       targetPort: 3000
   type: LoadBalancer
