changed service name, removing clusterIP to figure out a valid ip value

--- a/k8s/storage-statefulset.yaml
+++ b/k8s/storage-statefulset.yaml
@@ -37,9 +37,9 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: internal-service
+  name: web-storage
 spec:
-  clusterIP: ClusterIP
+  # clusterIP: ClusterIP
   selector:
     app: storage
   ports:
