--- a/k8s/storage-statefulset.yaml
+++ b/k8s/storage-statefulset.yaml
@@ -16,7 +16,7 @@ spec:
         app: storage
     spec:
       containers:
-        - name: 
+        - name: storage-container
           image: gcr.io/exam-458209/storage:latest
           imagePullPolicy: Always
           ports:
@@ -39,7 +39,7 @@ kind: Service
 metadata:
   name: web-storage
 spec:
-  # clusterIP: ClusterIP
+  # clusterIP: 34.118.229.70
   selector:
     app: storage
   ports:
