--- a/k8s/storage-statefulset.yaml
+++ b/k8s/storage-statefulset.yaml
@@ -28,7 +28,7 @@ spec:
     - metadata:
         name: storage-volume
       spec:
-        storageClassName: ""
+        storageClassName: "StorageClass"
         accessModes: ["ReadWriteOnce"]
         resources:
           requests:
@@ -39,7 +39,7 @@ kind: Service
 metadata:
   name: web-storage
 spec:
-  # clusterIP: 34.118.229.70
+  clusterIP: 34.118.229.70
   selector:
     app: storage
   ports:
