added standard storage class to the volumen claim

--- a/k8s/storage-statefulset.yaml
+++ b/k8s/storage-statefulset.yaml
@@ -28,7 +28,7 @@ spec:
     - metadata:
         name: storage-volume
       spec:
-        storageClassName: "StorageClass"
+        storageClassName: "standard"
         accessModes: ["ReadWriteOnce"]
         resources:
           requests:
