--- a/k8s/storage-statefulset.yaml
+++ b/k8s/storage-statefulset.yaml
@@ -39,7 +39,8 @@ kind: Service
 metadata:
   name: web-storage
 spec:
-  clusterIP: 34.118.229.70
+  # clusterIP: 34.118.229.70
+  type: wpqewo
   selector:
     app: storage
   ports:
