--- a/k8s/storage-statefulset.yaml
+++ b/k8s/storage-statefulset.yaml
@@ -40,7 +40,7 @@ metadata:
   name: web-storage
 spec:
   # clusterIP: 34.118.229.70
-  type: wpqewo
+  type: NodePort
   selector:
     app: storage
   ports:
