--- a/k8s/storage-statefulset.yaml
+++ b/k8s/storage-statefulset.yaml
@@ -39,8 +39,8 @@ kind: Service
 metadata:
   name: web-storage
 spec:
+  type: clusterIP
   # clusterIP: 34.118.229.70
-  type: NodePort
   selector:
     app: storage
   ports:
