Changed storage service type

--- a/k8s/storage-statefulset.yaml
+++ b/k8s/storage-statefulset.yaml
@@ -39,7 +39,7 @@ kind: Service
 metadata:
   name: web-storage
 spec:
-  type: clusterIP
+  type: ClusterIP
   # clusterIP: 34.118.229.70
   selector:
     app: storage
