--- a/k8s/storage-statefulset.yaml
+++ b/k8s/storage-statefulset.yaml
@@ -39,8 +39,7 @@ kind: Service
 metadata:
   name: web-storage
 spec:
-  type: ClusterIP
-  # clusterIP: 34.118.229.70
+  clusterIP: 10.128.0.19
   selector:
     app: storage
   ports:
