--- a/k8s/storage-statefulset.yaml
+++ b/k8s/storage-statefulset.yaml
@@ -41,8 +41,6 @@ metadata:
 spec:
   clusterIP: None
   selector:
-    app: storage
+    app: storage, web
   ports:
-    - protocol: TCP
-      port: 3000
-      targetPort: 3000
+    - port: 3000
